--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-13  Luca Ognibene  <luogni@tin.it>
+
+	* ext/ffmpeg/gstffmpegcodecmap.c (gst_ffmpeg_pixfmt_to_caps): 
+	  Add support for GRAY8 colorspace
+
 2005-05-11  Luca Ognibene  <luogni@tin.it>
 
 	* ext/ffmpeg/gstffmpegenc.c (gst_ffmpegenc_chain_video): 
