--- a/TODO
+++ b/TODO
@@ -2,14 +2,14 @@ The never-ending story of new features:
 * add more codecs into our codec map
 * encoding support lacks:
    - event handling (particularly discont/flush and EOS)
-* both encoding and decoding lacks:
+* encoding lacks:
    - prevent data copying
 * demux/mux support lacks:
    - good testing of exotic formats
    - correct caps sets on the pad templates
    - event handling in the loop function (mux)
    - prevent data copying
-* ffvideoscale, ffdeinterlace and other filter elements
+* ffdeinterlace and other filter elements
 * can we wrap URLProtocol as a source/sink?
 
 If you have cool ideas, add them here or contact the mailinglist:
