--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,24 @@
 2005-05-16  Benjamin Otte  <in7y118@public.uni-hamburg.de>
 
+	* gst/elements/Makefile.am:
+	* gst/elements/gstaggregator.c:
+	* gst/elements/gstaggregator.h:
+	* gst/elements/gstelements.c:
+	* gst/elements/gstmd5sink.c:
+	* gst/elements/gstmd5sink.h:
+	* gst/elements/gstmultifilesrc.c:
+	* gst/elements/gstmultifilesrc.h:
+	* gst/elements/gstpipefilter.c:
+	* gst/elements/gstpipefilter.h:
+	* gst/elements/gstshaper.c:
+	* gst/elements/gstshaper.h:
+	* gst/elements/gststatistics.c:
+	* gst/elements/gststatistics.h:
+	* po/POTFILES.in:
+	  remove elements that shouldn't be in core
+
+2005-05-16  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
 	* gst/autoplug/.cvsignore
 	* gst/autoplug/Makefile.am
 	* gst/autoplug/gstsearchfuncs.c
