--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2005-05-16  Benjamin Otte  <in7y118@public.uni-hamburg.de>
 
+	* gst/Makefile.am:
+	* gst/gst.c: (gst_init_get_popt_table), (init_post),
+	(init_popt_callback):
+	* gst/gst.h:
+	* gst/gstcpu.c:
+	* gst/gstcpu.h:
+	  remove CPU specific code
+
+2005-05-16  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
 	* gst/elements/Makefile.am:
 	* gst/elements/gstaggregator.c:
 	* gst/elements/gstaggregator.h:
