--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-17  Luca Ognibene  <luogni@tin.it>
+
+	* ext/ffmpeg/gstffmpegcodecmap.c (gst_ffmpeg_pixfmt_to_caps): 
+	  Add YUV444P format as Y444
+
 2005-05-15  Luca Ognibene  <luogni@tin.it>
 
 	* ext/ffmpeg/Makefile.am: 
