--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-24  Luca Ognibene  <luogni@tin.it>
+
+	* ext/ffmpeg/gstffmpegdeinterlace.c (gst_ffmpegdeinterlace_chain): 
+	  Always stamp your buffers ! (ooops)
+
 2005-05-24  Edward Hervey  <bilboed@bilboed.com>
 
 	* ext/ffmpeg/gstffmpegscale.c: (gst_ffmpegscale_chain):
