--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-03  Andreas Schwab  <schwab@suse.de>
+
+	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/elements/gstfilesrc.c: (gst_filesrc_map_region):
+	  Formatting fix (long/longlong), see #305653.
+
 2005-06-01  Benjamin Otte  <in7y118@public.uni-hamburg.de>
 
 	* gst/gstvalue.c: (gst_value_list_append_value):
