--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* configure.ac:
+	  scale requires -libs (video.h).
+	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_getcaps):
+	  Don't crash if open failed.
+
 2005-05-24  Luca Ognibene  <luogni@tin.it>
 
 	* ext/ffmpeg/gstffmpegdeinterlace.c (gst_ffmpegdeinterlace_chain): 
