--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-05  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/gstevent.c: (gst_event_new):
+	  Set invalid timestamp by default instead of zero on events.
+	* gst/gstqueue.c: (gst_queue_chain), (gst_queue_get):
+	  Clear interrupt state after handling.
+
 2005-06-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/gstvalue.c: (gst_value_list_append_value):
