--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-09  Edward Hervey  <bilboed@bilboed.com>
+
+	* examples/gst/gstfile.py: (Discoverer.discover): 
+	whoops, pipeline was being run twice :)
+
 2005-06-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* examples/gst/gstfile.py: fix typo
