--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-09  David Schleef  <ds@schleef.org>
+
+	* gst/gsttrashstack.h: Fix asm to build on Solaris (#170809)
+
 2005-06-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/schedulers/entryscheduler.c:
