--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,42 @@
+This is GStreamer FFMpeg 0.8.5
+
+Changes since 0.8.4:
+	New elements:
+	* scaler
+	* deinterlacer
+	* muxers (re-enabled; mpeg/mp4 for now)
+
+	Snapshot update:
+	* to 21/4 2005
+	* ALAC and shorten decoder
+	* many h264 improvements
+	* gcc4-support
+
+	Decoder:
+	* keyframe syncing for some codecs after seek
+	* write directly in output buffer, increases performance
+	* Better timestamp handling
+
+Bugs fixed since 0.8.4:
+	* 149097: Internal GStreamer error: pad problem. File a bug.
+	* 169082: segfault with invalid pipeline
+	* 169823: [enhancement] add alac decoding support :)
+	* 172668: gst-ffmpeg 0.8.4 doesn't compile with gcc4
+	* 172961: valgrind gives a lot of errors on gst-ffmpeg elements
+	* 173044: [PATCH to ffmpeg] Memory error in mjpeg_decode_frame
+	* 300200: cpu usage on certain .mov file goes to 100% once file has...
+	* 300923: [PATCH] make ffdec_* elements use gst_pad_alloc_buffer
+	* 301717: [PATCH] ffenc_mpeg4 segfaults in _get_caps
+	* 301783: [PATCH] enable our get/release_buffer functions in ffmpegdec
+	* 302017: possible segfault
+	* 302147: [PATCH] support YUVJ(420|422|444)P colorspace format in f...
+	* 306530: quicktime files encoded with "Sorensen video v.3" have fr...
+	* 306770: [PATCH] only do timestamp interpolation for delayed streams
+	* 306893: Unreffing already unreffed buffer when going from PAUSED-...
+
 This is GStreamer FFmpeg 0.8.4
 
-Changes since 0.8.2:
+Changes since 0.8.3:
 	Demuxers:
 	* fix I/O layer so almost all work now
 
@@ -9,7 +45,7 @@ Changes since 0.8.2:
 	* timestamp smoothing
 	* MPEG/MP3 parsing added
 
-Bugs fixed since 0.8.2:
+Bugs fixed since 0.8.3:
 
 	* 162905 : SEGV when using ffenc_msmpeg4
 	* 163340 : [PATCH] [ffdec_mjpeg] ffdec_mjpeg doesn't work anymore
