--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-13  Jan Schmidt  <thaytan@mad.scientist.com>
+
+  * gst/gstqueue.c: (gst_queue_chain), (gst_queue_get):
+    Add filler event handling.
+
 2005-06-09  David Schleef  <ds@schleef.org>
 
 	* gst/gsttrashstack.h: Fix asm to build on Solaris (#170809)
