--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-14  Stefan Kost  <ensonic@users.sf.net>
+
+	* tools/gst-inspect.c: (print_element_properties_info):
+          Default values were current values in property output.
+          Output ranges + defaults also for unreadable values.
+          Fix output for float and double.
+
 2005-06-13  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* gst/gstqueue.c: (gst_queue_chain), (gst_queue_get):
