--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-16  Stefan Kost  <ensonic@users.sf.net>
+
+	* configure.ac:
+          we require a newer libxml2 version that 2.4.X
+
 2005-06-14  Stefan Kost  <ensonic@users.sf.net>
 
 	* tools/gst-inspect.c: (print_element_properties_info):
